[project]
name = "video-overlay-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "yt-dlp (>=2025.1.26,<2026.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "asyncer (>=0.0.8,<0.0.9)",
    "aiofiles (>=24.1.0,<25.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
